# aiogram-template

./: .env.example  .gitignore  Makefile  README.md  config.json  dialog_rem.ps1  dialog_rem.sh  docker-compose.yml  init.py  pyproject.toml
app/: config.py  logging_setup.py  main.py  runtime_config.py
app/application/dto/: user.py
app/application/interfaces/: cache.py
app/application/services/: ban_cache.py
app/application/use_cases/: manage_users.py  register_user.py
app/domain/entities/: user.py
app/domain/exceptions/: user.py
app/domain/repositories/: user.py
app/infrastructure/cache/: redis.py
app/infrastructure/database/: engine.py
app/infrastructure/database/models/: user.py
app/infrastructure/database/repositories/: user.py
app/infrastructure/ioc/: providers.py
app/presentation/: error_handling.py  webhook.py
app/presentation/dialogs/: __init__.py  basic.py
app/presentation/filters/: owner.py
app/presentation/handlers/owner/: __init__.py  owner_panel.py
app/presentation/handlers/users/: __init__.py  help.py  start.py
app/presentation/keyboards/: callbacks.py  owner.py
app/presentation/middlewares/: __init__.py  ban.py  rate_limit.py
app/presentation/routers/: __init__.py
app/ui/: __init__.py  messages.json
docker/: Dockerfile
tests/unit/: test_dialog_rem_script.py  test_init.py
tests/unit/application/: test_manage_users.py  test_register_user.py
tests/unit/domain/: test_ui_loader.py  test_user_entity.py
