[project]
name = "aiogram-template"
version = "0.1.0"
description = "Production-ready Telegram bot template — Clean Architecture + aiogram 3"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Evgeny Gerber", email = "pm@c8evgeny.ru" }
]
license = { text = "MIT" }

dependencies = [
    "aiogram>=3.26.0",
    "aiogram-dialog>=2.5.0",
    "fastapi>=0.135.1",
    "hypercorn>=0.18.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "redis[hiredis]>=7.3.0",
    "dishka>=1.9.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "rich>=14.3.3",
    "orjson>=3.11.7",
    "inquirerpy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
